# SandBox_Mkdocs

./: .gitignore  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yaml
API/: index.html
API/calculations/: index.html
API/prints/: index.html
API/sandbox/: index.html
Playground/: index.html
Playground/GitHub actions/: index.html
Playground/code execution/: index.html
Playground/formatting/: index.html
Playground/links/: index.html
Playground/pyodide/: index.html
css/: mkdocstrings.css  mkdocstrings_simple.css
docs/: README.md
docs/API/: calculations.md  index.md  prints.md  sandbox.md
docs/Playground/: GitHub actions.md  code execution.md  formatting.md  index.md  links.md  pyodide.md
docs/css/: mkdocstrings.css  mkdocstrings_simple.css
sandbox/: __init__.py  calculations.py  prints.py  sandbox.py
search/: search_index.json
