[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Carolina Lennon <14179052+lennon-c@users.noreply.github.com>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ipykernel = "^6.29.5"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.42"
mkdocstrings-python = "^1.12.2"
markdown-exec = {extras = ["ansi"], version = "^1.9.3"}
mkdocs-open-in-new-tab = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
